RESOLVED FIXED47807
if (0) throw "x" ; else { } throws parse error after r69906
https://bugs.webkit.org/show_bug.cgi?id=47807
Summary if (0) throw "x" ; else { } throws parse error after r69906
Zoltan Herczeg
Reported 2010-10-18 03:12:27 PDT
r69906 (https://bugs.webkit.org/show_bug.cgi?id=47762) introduced an issue: the semicolon after a throw is not consumed anymore. This bug was captured by v8-early-boyer, as there is no such test case in LayoutTests (so far).
Attachments
patch (3.65 KB, patch)
2010-10-18 03:33 PDT, Zoltan Herczeg
no flags
Zoltan Herczeg
Comment 1 2010-10-18 03:33:15 PDT
Oliver Hunt
Comment 2 2010-10-18 09:02:10 PDT
Comment on attachment 71016 [details] patch Whoops :-(
WebKit Commit Bot
Comment 3 2010-10-18 09:28:15 PDT
The commit-queue encountered the following flaky tests while processing attachment 71016 [details]: http/tests/websocket/tests/multiple-connections.html Please file bugs against the tests. The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 4 2010-10-18 09:30:34 PDT
Comment on attachment 71016 [details] patch Clearing flags on attachment: 71016 Committed r69963: <http://trac.webkit.org/changeset/69963>
WebKit Commit Bot
Comment 5 2010-10-18 09:30:41 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 6 2010-10-18 10:25:16 PDT
*** Bug 47814 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.