2010-10-18  Zoltan Herczeg  <zherczeg@webkit.org>

Reviewed by Oliver Hunt.

        if (0) throw "x" ; else { } throws parse error after r69906
        https://bugs.webkit.org/show_bug.cgi?id=47807

        r69906 introduced a bug: the semicolon is not parsed after a throw
        expression anymore. Thus, the semicolon terminates the "if" parsing
        in the example above, and the else token results a parse error.

        * parser/JSParser.cpp:
        (JSC::JSParser::parseThrowStatement):
2010-10-18  Zoltan Herczeg  <zherczeg@webkit.org>

        Reviewed by Oliver Hunt.

        if (0) throw "x" ; else { } throws parse error after r69906
        https://bugs.webkit.org/show_bug.cgi?id=47807

        Adding a new test case to break-ASI.js

        * fast/js/break-ASI-expected.txt:
        * fast/js/script-tests/break-ASI.js:

Canonical link: https://commits.webkit.org/60529@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69963 268f45cc-cd09-0410-ab3c-d52691b4dbfc